# opengl_exercises

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: simple_fragment_shader.fragmentshader  simple_vertex_shader.vertexshader
src/: main.cpp
